--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "dependencies": {
-    "@fullhuman/postcss-purgecss": "^1.2.0",
+    "antea-sassy": "next",
     "cross-env": "^5.2.0",
     "css-loader": "3.2.0",
     "eslint": "^6.0.1",
