--- a/composer.json
+++ b/composer.json
@@ -1,11 +1,11 @@
 {
   "require": {
-        "yahnis-elsts/plugin-update-checker": "^4.7",
-        "aristath/kirki": "^3.0",
-        "timber/timber": "^1.10",
-        "jjgrainger/posttypes": "^2.0",
-        "htmlburger/carbon-fields": "^3.1",
-        "dusank/knapsack": "^10.0"
+    "aristath/kirki": "^3.0",
+    "dusank/knapsack": "^10.0",
+    "htmlburger/carbon-fields": "^3.1",
+    "jjgrainger/posttypes": "^2.0",
+    "timber/timber": "^1.10",
+    "yahnis-elsts/plugin-update-checker": "^4.7"
   },
   "require-dev": {
         "roave/security-advisories": "dev-master"
@@ -18,5 +18,9 @@
       "vendor/aristath/kirki/kirki.php",
       "src/app.php"
     ]
+  },
+  "config": {
+    "optimize-autoloader": true,
+    "sort-packages": true
   }
 }
