--- a/package.json
+++ b/package.json
@@ -29,6 +29,16 @@
   "devDependencies": {
     "autoprefixer": "^9.6.1",
     "resolve-url-loader": "3.1.0",
-    "vue-template-compiler": "^2.6.10"
+    "vue-template-compiler": "^2.6.10",
+    "stylelint": "^10.1.0",
+    "stylelint-config-standard": "^18.3.0"
+  },
+  "browserslist": [
+    "defaults"
+  ],
+  "stylelint": {
+    "extends": [
+      "stylelint-config-standard"
+    ]
   }
 }
