--- a/package.json
+++ b/package.json
@@ -28,10 +28,12 @@
   },
   "devDependencies": {
     "autoprefixer": "^9.6.1",
+    "browser-sync": "^2.26.7",
+    "browser-sync-webpack-plugin": "2.0.1",
     "resolve-url-loader": "3.1.0",
-    "vue-template-compiler": "^2.6.10",
     "stylelint": "^10.1.0",
-    "stylelint-config-standard": "^18.3.0"
+    "stylelint-config-standard": "^18.3.0",
+    "vue-template-compiler": "^2.6.10"
   },
   "browserslist": [
     "defaults"
