Moved some code to a specific file, also added counter to the products.

--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
     },
     "files": [
       "vendor/aristath/kirki/kirki.php",
-      "src/app.php"
+      "src/app.php",
+      "src/helpers.php"
     ]
   },
   "config": {
